Replaced tower assignment delete button with a new styled component, updated color scheme, mostly solved sising issue with assignments, aligned assignments for tower, forced 100vh height on body to prevent pushing screen bounds.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,8 @@ body {
     font-family: 'Nanum Gothic', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    height: 100vh;
+    overflow: hidden;
 }
 
 code {
